--- a/ui/src/css/variables.styl
+++ b/ui/src/css/variables.styl
@@ -6,6 +6,10 @@ $spaces ?= {
     x: 0,
     y: 0
   },
+  auto: {
+    x: auto,
+    y: auto
+  },
   xs: {
     x: ($space-x-base * .25),
     y: ($space-y-base * .25)
